tests/type-errors/var_mult_ids_errors_invalid_type.arl
archetype var_mult_ids_errors_invalid_type

entry exec() {
  var a, b = 2;
}
